[package]
name = "hedl-stream-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.hedl-stream]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_streaming_parser"
path = "fuzz_targets/fuzz_streaming_parser.rs"
test = false
doc = false
